# papersnap

./: README.md  evaluate.py  pyproject.toml
.github/workflows/: ci.yml
results/: manifest.json
src/papersnap/: __init__.py  caption.py  cli.py  extractor.py  manifest.py  renderer.py  utils.py
tests/: test_caption.py  test_evaluate.py  test_extractor.py
